Implementa enpoint para crear nuevo paciente
