# src/main/java/com/healthcare/apps/patient/management/business/api/resources/PatientResource.java
@@ -1,21 +1,30 @@
 package com.healthcare.apps.patient.management.business.api.resources;
 
-import java.util.List;
-
 import com.healthcare.apps.patient.management.api.PatientsApi;
+import com.healthcare.apps.patient.management.business.domain.services.PatientService;
+import com.healthcare.apps.patient.management.model.PatientRequest;
 import com.healthcare.apps.patient.management.model.PatientResponse;
 
+import jakarta.enterprise.context.ApplicationScoped;
+import jakarta.inject.Inject;
 import jakarta.ws.rs.core.Response;
 
+@ApplicationScoped
 public class PatientResource implements PatientsApi {
+
+    @Inject
+    PatientService patientService;
+
+    @Override
+    public Response createPatient(PatientRequest patientRequest) {
+        PatientResponse created = patientService.create(patientRequest);
+        return Response.status(Response.Status.CREATED).entity(created).build();
+    }
 
     @Override
     public Response getPatientById(String id) {
-
-        List<PatientResponse> patients = List.of(
-                new PatientResponse().id("123").name("John").email("k@d.com").phone("54545"),
-                new PatientResponse().id("456").name("Path").email("e@j.com").phone("45685")
-        );
-        return Response.ok(patients).build();
+        return patientService.getById(id)
+                .map(patient -> Response.ok(patient).build())
+                .orElse(Response.noContent().build());
     }
 }
